--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.1.1"
   }
 }
